[gd_scene load_steps=36 format=3 uid="uid://bfo1bxbj7knm0"]

[ext_resource type="Script" path="res://game/game.gd" id="1_5uhe0"]
[ext_resource type="PackedScene" uid="uid://lprkgl2wh3cd" path="res://game/camera/camera.tscn" id="2_1yirq"]
[ext_resource type="PackedScene" uid="uid://bl7d8jwotcuws" path="res://models/phone/phone.tscn" id="2_4rjj7"]
[ext_resource type="Texture2D" uid="uid://48p1jkwhm4wh" path="res://models/club/samm0363_texture_of_a_bar_table_with_stains_and_wear_tile_5a36bd34-3c9c-4c2b-a62c-8adabec8fccf.png" id="4_g7021"]
[ext_resource type="Script" path="res://game/world_viewport.gd" id="4_oqmxi"]
[ext_resource type="PackedScene" uid="uid://df031doltiks0" path="res://game/points_service/points_service.tscn" id="6_2emse"]
[ext_resource type="AudioStream" uid="uid://cox0cypa0r0wf" path="res://game/crowd_service/Bar Ambience Sound Effect- No Copyright.mp3" id="8_3ww8b"]
[ext_resource type="AudioStream" uid="uid://b3hkravd23cph" path="res://game/crowd_service/400587__misjoc__medium-crowd-cheering-01(1).wav" id="9_cepbh"]
[ext_resource type="Script" path="res://game/animation.gd" id="9_ds76j"]
[ext_resource type="Script" path="res://game/crowd_service/crowd_service.gd" id="10_aypd4"]
[ext_resource type="PackedScene" uid="uid://lb3oq22iphka" path="res://addons/rhythmic_animation_player/rhythmic_animation_player_host_control.tscn" id="10_cc86w"]
[ext_resource type="AudioStream" uid="uid://b0sodcqt4qvjc" path="res://game/crowd_service/clap.wav" id="10_pwek6"]
[ext_resource type="PackedScene" uid="uid://bqej7kilkwxxl" path="res://mixamo/ch_03_non_pbr.tscn" id="11_dbcca"]
[ext_resource type="PackedScene" uid="uid://dgg103ssmbg32" path="res://settings/settings.tscn" id="14_anos2"]
[ext_resource type="Script" path="res://game/GuidesService.gd" id="14_y06of"]
[ext_resource type="CameraAttributesPractical" uid="uid://ev1eo0cru0we" path="res://game/cameraatr.tres" id="16_2sje1"]
[ext_resource type="Script" path="res://game/world_environment.gd" id="18_sypot"]
[ext_resource type="Environment" uid="uid://b8uhvyo3rc3m8" path="res://settings/environment_potato.tres" id="20_m1yfn"]
[ext_resource type="PackedScene" uid="uid://ddflkpqn6dlb2" path="res://models/club/ceiling.glb" id="23_5otcv"]
[ext_resource type="PackedScene" uid="uid://b1nl0hf3y08em" path="res://models/club/bus.glb" id="23_dn6o6"]
[ext_resource type="Script" path="res://game/audio_service.gd" id="25_uoe2k"]
[ext_resource type="PackedScene" uid="uid://b52j7vr3riih1" path="res://models/club/beam.tscn" id="26_otakv"]
[ext_resource type="PackedScene" uid="uid://dp46bep2k8li2" path="res://models/club/corner_bar_roof.tscn" id="26_sxcco"]
[ext_resource type="PackedScene" uid="uid://hrc3u1iu4mgh" path="res://models/club/corner_bar.tscn" id="26_vbtwx"]
[ext_resource type="PackedScene" uid="uid://rbuf4nqmcmjx" path="res://models/acid/acid.tscn" id="27_daa16"]
[ext_resource type="PackedScene" uid="uid://03x3y7xp68cb" path="res://models/club/wavey_bit.tscn" id="27_pss2n"]
[ext_resource type="PackedScene" uid="uid://cnnors0cf4oai" path="res://models/redux/redux.tscn" id="27_rrm5u"]
[ext_resource type="PackedScene" uid="uid://dfkhn8atn11hq" path="res://models/toydrum/drum.tscn" id="27_w54s6"]
[ext_resource type="PackedScene" uid="uid://btlti17abjtib" path="res://models/club/support_struts.tscn" id="30_1irv8"]
[ext_resource type="PackedScene" uid="uid://b62iupev6i1wx" path="res://models/club/stool.tscn" id="31_6bj4l"]
[ext_resource type="PackedScene" uid="uid://i03bmf81kljr" path="res://models/club/wall_chair.glb" id="31_huqk1"]
[ext_resource type="PackedScene" uid="uid://lndcipgnpctm" path="res://models/club/table.tscn" id="32_sk0m7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ij4h"]
albedo_color = Color(0.235294, 0.235294, 0.235294, 1)
albedo_texture = ExtResource("4_g7021")
metallic = 0.84
metallic_specular = 0.28
roughness = 0.42
normal_scale = 0.05
normal_texture = ExtResource("4_g7021")
rim_tint = 1.0
clearcoat_roughness = 0.0
anisotropy = -1.0
ao_light_affect = 1.0
heightmap_scale = 1.0
subsurf_scatter_strength = 0.3
uv1_scale = Vector3(3, 3, 3)
uv1_offset = Vector3(-0.1305, 0, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_ml2c8"]
margin = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2x22v"]
albedo_color = Color(0.235294, 0.235294, 0.235294, 1)
albedo_texture = ExtResource("4_g7021")
metallic = 0.84
metallic_specular = 0.28
roughness = 0.42
normal_scale = 0.05
normal_texture = ExtResource("4_g7021")
rim_tint = 1.0
clearcoat_roughness = 0.0
anisotropy = -1.0
ao_light_affect = 1.0
heightmap_scale = 1.0
subsurf_scatter_strength = 0.3
uv1_scale = Vector3(3, 3, 3)
uv1_offset = Vector3(-0.1305, 0, 0)

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConfigService" parent="." instance=ExtResource("14_anos2")]

[node name="Recorder" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Recorder"]
layer = 3
visible = false
script = ExtResource("9_ds76j")

[node name="VSplitContainer" type="VSplitContainer" parent="Recorder/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/autohide = 0

[node name="ColorRect" type="ColorRect" parent="Recorder/CanvasLayer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="BeatPlayerHost" parent="Recorder/CanvasLayer/VSplitContainer" instance=ExtResource("10_cc86w")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.882353)
layout_mode = 2
save_path = "res://junk/beat2.bp"
root_node = NodePath("../../../../WorldViewport/SubViewport/Game")

[node name="WorldViewport" type="SubViewportContainer" parent="."]
layout_mode = 2
mouse_filter = 2
stretch = true
script = ExtResource("4_oqmxi")

[node name="SubViewport" type="SubViewport" parent="WorldViewport"]
handle_input_locally = false
gui_snap_controls_to_pixels = false
size = Vector2i(1680, 1050)
render_target_update_mode = 4

[node name="Game" type="Node3D" parent="WorldViewport/SubViewport"]
script = ExtResource("1_5uhe0")
metadata/_edit_lock_ = true

[node name="AudioService" type="Node" parent="WorldViewport/SubViewport/Game"]
script = ExtResource("25_uoe2k")

[node name="CrowdService" type="Node3D" parent="WorldViewport/SubViewport/Game"]
script = ExtResource("10_aypd4")

[node name="Marker3D" type="Marker3D" parent="WorldViewport/SubViewport/Game/CrowdService"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0404572, 0.211978, 0.332187)

[node name="Marker3D2" type="Marker3D" parent="WorldViewport/SubViewport/Game/CrowdService"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.9854e-05, 0.442598, -0.773063)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="WorldViewport/SubViewport/Game/CrowdService"]
stream = ExtResource("8_3ww8b")
autoplay = true

[node name="Scream" type="AudioStreamPlayer" parent="WorldViewport/SubViewport/Game/CrowdService"]
stream = ExtResource("9_cepbh")
volume_db = 5.0

[node name="Clap" type="AudioStreamPlayer" parent="WorldViewport/SubViewport/Game/CrowdService"]
stream = ExtResource("10_pwek6")
volume_db = 5.0

[node name="Ch03_nonPBR" parent="WorldViewport/SubViewport/Game/CrowdService" instance=ExtResource("11_dbcca")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.531129, -1.19139, -1.99893)

[node name="Ch03_nonPBR2" parent="WorldViewport/SubViewport/Game/CrowdService" instance=ExtResource("11_dbcca")]
transform = Transform3D(0.527519, 0, -0.849543, 0, 1, 0, 0.849543, 0, 0.527519, 3.11932, -1.18293, -2.65621)

[node name="Ch03_nonPBR3" parent="WorldViewport/SubViewport/Game/CrowdService" instance=ExtResource("11_dbcca")]
transform = Transform3D(0.89913, 0, -0.437681, 0, 1, 0, 0.437681, 0, 0.89913, 1.21694, -1.16179, -9.00183)

[node name="PointsService" parent="WorldViewport/SubViewport/Game" instance=ExtResource("6_2emse")]

[node name="Guides" type="Node3D" parent="WorldViewport/SubViewport/Game"]
script = ExtResource("14_y06of")

[node name="Camera" parent="WorldViewport/SubViewport/Game" instance=ExtResource("2_1yirq")]

[node name="phone" parent="WorldViewport/SubViewport/Game" instance=ExtResource("2_4rjj7")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0.0847787, 0.00177433, 0.187085)

[node name="StaticBody3D" type="StaticBody3D" parent="WorldViewport/SubViewport/Game"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.500806, 0.363653)
collision_layer = 8
collision_mask = 0

[node name="CSGBox3D" type="CSGBox3D" parent="WorldViewport/SubViewport/Game/StaticBody3D"]
collision_layer = 8
collision_mask = 8
material = SubResource("StandardMaterial3D_3ij4h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldViewport/SubViewport/Game/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00122625, 0)
shape = SubResource("BoxShape3D_ml2c8")

[node name="Redux" parent="WorldViewport/SubViewport/Game" instance=ExtResource("27_rrm5u")]
transform = Transform3D(-0.979535, 0, -0.201273, 0, 1, 0, 0.201273, 0, -0.979535, 0.184669, 0.012781, 0.105101)

[node name="acid" parent="WorldViewport/SubViewport/Game" instance=ExtResource("27_daa16")]
transform = Transform3D(0.938384, -0.0184845, -0.345099, 0.000366127, 0.998621, -0.0524935, 0.345594, 0.0491327, 0.937097, 0.0540479, 0.00244257, 0.055736)

[node name="toykit" parent="WorldViewport/SubViewport/Game" instance=ExtResource("27_w54s6")]
transform = Transform3D(-0.44806, 0, -0.894003, 0, 1, 0, 0.894003, 0, -0.44806, 0.109198, 0.0174311, -0.0306898)

[node name="CSGBox3D2" type="CSGBox3D" parent="WorldViewport/SubViewport/Game"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.499829, 0.377878)
visible = false
use_collision = true
collision_layer = 8
collision_mask = 0
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_2x22v")

[node name="WorldEnvironment" type="WorldEnvironment" parent="WorldViewport/SubViewport/Game"]
environment = ExtResource("20_m1yfn")
camera_attributes = ExtResource("16_2sje1")
script = ExtResource("18_sypot")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldViewport/SubViewport/Game/WorldEnvironment"]
transform = Transform3D(-0.838546, -0.544563, -0.0171135, -0.226715, 0.320201, 0.919822, -0.49542, 0.775192, -0.391964, 0, 0.26248, 0.363653)
shadow_reverse_cull_face = true
shadow_blur = 0.159
directional_shadow_mode = 0
directional_shadow_split_1 = 0.0
directional_shadow_split_2 = 0.117
directional_shadow_split_3 = 1.0
directional_shadow_blend_splits = true
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 15.0
directional_shadow_pancake_size = 0.2

[node name="OmniLight3D" type="OmniLight3D" parent="WorldViewport/SubViewport/Game" groups=["light"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0340311, 0.145733, -0.103002)
light_color = Color(0, 0.737255, 0.47451, 1)
omni_range = 0.188

[node name="OmniLight3D4" type="OmniLight3D" parent="WorldViewport/SubViewport/Game" groups=["light"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.269406, 0.341738, -1.06024)
light_color = Color(1, 0, 1, 1)
shadow_enabled = true
omni_range = 1.47

[node name="OmniLight3D5" type="OmniLight3D" parent="WorldViewport/SubViewport/Game" groups=["light"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.16853, 0.768919, -3.68455)
light_color = Color(0.90044, 0.511822, 1.92523e-07, 1)
shadow_enabled = true
omni_range = 1.47

[node name="OmniLight3D2" type="OmniLight3D" parent="WorldViewport/SubViewport/Game" groups=["light"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.230654, 0.0535484, -0.0864199)
light_color = Color(0.988235, 0.662745, 0, 1)
omni_range = 0.188
omni_shadow_mode = 0

[node name="OmniLight3D6" type="OmniLight3D" parent="WorldViewport/SubViewport/Game" groups=["light"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.237579, 0.0512464, 0.121413)
light_color = Color(0.270588, 0.882353, 0, 1)
light_energy = 0.28
light_indirect_energy = 0.0
shadow_enabled = true
shadow_bias = 0.0
shadow_blur = 0.6
omni_range = 0.188
omni_shadow_mode = 0

[node name="OmniLight3D3" type="OmniLight3D" parent="WorldViewport/SubViewport/Game" groups=["light"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0617377, 0.089229, 0.0974289)
light_color = Color(0, 0.662745, 0.635294, 1)
light_energy = 0.395
light_size = 0.003
shadow_bias = 0.03
shadow_blur = 1.45
omni_range = 0.188

[node name="Garden" type="Node3D" parent="WorldViewport/SubViewport/Game"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0039897, 2.38419e-07, -0.00944376)

[node name="corner_bar" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("26_vbtwx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.74418, -1.13006, -8.87296)

[node name="corner_bar2" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("26_vbtwx")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 3.234, -1.13, -7.433)

[node name="corner_bar3" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("26_vbtwx")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 3.234, -1.13, -7.433)

[node name="corner_bar4" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("26_vbtwx")]
transform = Transform3D(0.414884, 0, 0.909874, 0, 1, 0, -0.909874, 0, 0.414884, 5.34276, -1.13, -6.9969)

[node name="bus" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("23_dn6o6")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -0.672053, 1.4213, -13.4932)

[node name="CSGBox3D" type="CSGBox3D" parent="WorldViewport/SubViewport/Game/Garden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25964, 0.238457, -16.5099)
size = Vector3(10, 6, 1)

[node name="CSGBox3D7" type="CSGCylinder3D" parent="WorldViewport/SubViewport/Game/Garden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.50298, -0.720827, -3.02008)
radius = 0.3
height = 1.0

[node name="CSGBox3D8" type="CSGCylinder3D" parent="WorldViewport/SubViewport/Game/Garden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.57974, -0.622269, -4.79196)
radius = 0.3
height = 1.0

[node name="CSGBox3D9" type="CSGCylinder3D" parent="WorldViewport/SubViewport/Game/Garden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.204374, -0.622269, -5.95046)
radius = 0.3
height = 1.0

[node name="CSGBox3D4" type="CSGBox3D" parent="WorldViewport/SubViewport/Game/Garden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5804, 0, -11.3289)
size = Vector3(10, 3, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="WorldViewport/SubViewport/Game/Garden"]
transform = Transform3D(0.999753, 0, 0.0222341, 0, 1, 0, -0.0222341, 0, 0.999753, 9.00051, 0, -7.47177)
size = Vector3(5.14, 3, 19.885)

[node name="CSGBox3D3" type="CSGBox3D" parent="WorldViewport/SubViewport/Game/Garden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.12608, 0, 4.5843)
size = Vector3(5, 3, 30)

[node name="CSGBox3D2" type="CSGBox3D" parent="WorldViewport/SubViewport/Game/Garden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0365267, -1.64918, 0.0107279)
size = Vector3(20, 1, 34.2)

[node name="wavey_bit" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("27_pss2n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.12593, 1.43474, -1.07182)

[node name="wavey_bit2" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("27_pss2n")]
transform = Transform3D(-4.27426e-08, 0.154713, 1.48347, 6.47152e-09, 1.03348, -0.222077, -1, 7.53581e-11, -6.48445e-08, 5.05583, 1.16892, -4.93498)

[node name="wavey_bit3" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("27_pss2n")]
transform = Transform3D(-4.27426e-08, 0.154713, 1.48347, 6.47152e-09, 1.03348, -0.222077, -1, 7.53581e-11, -6.48445e-08, 5.05583, 1.16892, -2.94679)

[node name="corner_bar_roof" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("26_sxcco")]
transform = Transform3D(1.6, 0, 0, 0, 1.6, 0, 0, 0, 1.6, 4.42617, -1.12103, -9.78897)

[node name="ceiling2" parent="WorldViewport/SubViewport/Game/Garden" instance=ExtResource("23_5otcv")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.724, 0, -0.232)
visible = false

[node name="support_struts" parent="." instance=ExtResource("30_1irv8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.25267, 1.38533, -0.973205)

[node name="support_struts2" parent="." instance=ExtResource("30_1irv8")]
transform = Transform3D(-4.37114e-08, 0.147809, 1.48352, 0, 0.989016, -0.221714, -1, -6.46095e-09, -6.48469e-08, 4.99147, 1.11241, -5.03282)

[node name="support_struts3" parent="." instance=ExtResource("30_1irv8")]
transform = Transform3D(-4.37114e-08, 0.147809, 1.48352, 0, 0.989016, -0.221714, -1, -6.46095e-09, -6.48469e-08, 5.0817, 1.11241, -3.25051)

[node name="beam" parent="." instance=ExtResource("26_otakv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.103, -1.157, -1.9716)

[node name="wall_chair3" parent="." instance=ExtResource("31_huqk1")]
transform = Transform3D(0.999864, 0, 0.0165275, 0, 1, 0, -0.0165275, 0, 0.999864, 5.54276, -1.14405, -6.41576)

[node name="wall_chair2" parent="." instance=ExtResource("31_huqk1")]
transform = Transform3D(0.999982, 0, 0.00596899, 0, 1, 0, -0.00596899, 0, 0.999982, 5.58377, -1.14904, -3.39943)

[node name="wall_chair4" parent="." instance=ExtResource("31_huqk1")]
transform = Transform3D(0.999982, 0, 0.00596899, 0, 1, 0, -0.00596899, 0, 0.999982, 5.58377, -1.14904, 0.503331)

[node name="stool" parent="." instance=ExtResource("31_6bj4l")]
transform = Transform3D(-0.0628602, 0, -0.998023, 0, 1, 0, 0.998023, 0, -0.0628602, 4.07715, -1.16996, -5.77182)

[node name="stool2" parent="." instance=ExtResource("31_6bj4l")]
transform = Transform3D(0.0430092, 0, 0.999075, 0, 1, 0, -0.999075, 0, 0.0430092, 3.98772, -1.16996, -4.09422)

[node name="stool3" parent="." instance=ExtResource("31_6bj4l")]
transform = Transform3D(-0.141126, 0, -0.989992, 0, 1, 0, 0.989992, 0, -0.141126, 3.88964, -1.16996, -2.36666)

[node name="stool5" parent="." instance=ExtResource("31_6bj4l")]
transform = Transform3D(-0.014102, 0, -0.999901, 0, 1, 0, 0.999901, 0, -0.014102, 6.94701, -1.16996, 0.697456)

[node name="table" parent="." instance=ExtResource("32_sk0m7")]
transform = Transform3D(-0.000907607, 0, -1, 0, 1, 0, 1, 0, -0.000907607, 4.84088, -1.13934, -5.63662)

[node name="table2" parent="." instance=ExtResource("32_sk0m7")]
transform = Transform3D(-0.00115182, 0, 0.999999, 0, 1, 0, -0.999999, 0, -0.00115182, 4.84708, -1.13934, -4.11709)

[connection signal="play" from="Recorder/CanvasLayer/VSplitContainer/BeatPlayerHost" to="WorldViewport/SubViewport/Game" method="_play"]
[connection signal="stop" from="Recorder/CanvasLayer/VSplitContainer/BeatPlayerHost" to="WorldViewport/SubViewport/Game" method="_stop"]
